@@ -22,28 +22,53 @@ import org.junit.Test;
 
 public class SampleTests {
 
+    @Ignore
     @Test
-    public void testSample() {
-        Integer a = new Integer(2);
-        long b = 2000300040005000L;
-        System.out.println(a == b);
-        
-        int c=(int)b;
-        System.out.println(c);
+    public void testDivisor() {
+        // Scanner
+        final Scanner s = new Scanner(System.in);
+        final int totalNums = Integer.valueOf(s.nextLine());
+
+        for (int k = 0; k < totalNums; k++) {
+            final int n = Integer.valueOf(s.nextLine());
+            System.out.println("Current Num : " + n);
+            final List<Integer> divisors = new ArrayList<>();
+
+            for (int i = 1; i < n; i++) {
+                if (n % i == 0) {
+                    divisors.add(i);
+                }
+            }
+
+            System.out.println("divisor list : " + divisors);
+            int sum = 0;
+            for (final int i : divisors) {
+                sum = sum + i;
+            }
+
+            System.out.println("sum : " + sum);
+            if (sum == n) {
+                System.out.println("YES");
+            }
+            else {
+                System.out.println("NO");
+            }
+        }
+
     }
 
     @Ignore
     @Test
     public void testLog() {
         // Scanner
-        Scanner s = new Scanner(System.in);
-        int totalNums = Integer.valueOf(s.nextLine());
-        double log2 = Math.log(2);
+        final Scanner s = new Scanner(System.in);
+        final int totalNums = Integer.valueOf(s.nextLine());
+        final double log2 = Math.log(2);
         for (int i = 0; i < totalNums; i++) {
 
-            String[] line = s.nextLine().split(" ");
-            int C = Integer.valueOf(line[0]);
-            int S = Integer.valueOf(line[1]);
+            final String[] line = s.nextLine().split(" ");
+            final int C = Integer.valueOf(line[0]);
+            final int S = Integer.valueOf(line[1]);
 
             double currentSweetnes = 0.0d;
 
@@ -62,39 +87,14 @@ public class SampleTests {
         s.close();
     }
 
-    @Ignore
     @Test
-    public void testDivisor() {
-        // Scanner
-        Scanner s = new Scanner(System.in);
-        int totalNums = Integer.valueOf(s.nextLine());
+    public void testSample() {
+        final Integer a = new Integer(2);
+        final long b = 2000300040005000L;
+        System.out.println(a == b);
 
-        for (int k = 0; k < totalNums; k++) {
-            int n = Integer.valueOf(s.nextLine());
-            System.out.println("Current Num : " + n);
-            List<Integer> divisors = new ArrayList<>();
-
-            for (int i = 1; i < n; i++) {
-                if ((n % i) == 0) {
-                    divisors.add(i);
-                }
-            }
-
-            System.out.println("divisor list : " + divisors);
-            int sum = 0;
-            for (int i : divisors) {
-                sum = sum + i;
-            }
-
-            System.out.println("sum : " + sum);
-            if (sum == n) {
-                System.out.println("YES");
-            }
-            else {
-                System.out.println("NO");
-            }
-        }
-
+        final int c = (int) b;
+        System.out.println(c);
     }
 
 }
